edit footer content

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -30,10 +30,10 @@ export type Props = {
                 <hr />
                 <div class="footer-content">
                     <div class="left">
-                        <a href="mailto:help@uma.cafe">Contact</a>
+                        <a href="mailto:hello@uma.cafe">Contact</a>
                     </div>
                     <div class="right">
-                        <a href="/editor/login">Editor Login</a>
+                        <a href="https://admin.uma.cafe">Editor Login</a>
                     </div>
                 </div>
             </footer>
