--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,6 +17,9 @@ export type Props = {
                 <div class="link">
                     <a href="/characters">Characters</a>
                 </div>
+                <div class="link">
+                    <a href="/albums">Albums</a>
+                </div>
             </div>
         </header>
     </nav>
