--- a/src/pages/characters/[charId].astro
+++ b/src/pages/characters/[charId].astro
@@ -96,7 +96,7 @@ if (character.counterpart)
 <Layout
     title={character.name_en}
     description={en?.about ??
-        `Information about ${character.name_en} from Uma Musume`}
+        `Information about ${character.name_en} from Umamusume`}
     image={await asset(character.icon)}
 >
     <InfoPanel
@@ -175,7 +175,6 @@ if (character.counterpart)
         height: 0;
         padding-top: 176%; /* h/w: 1320/750 */
     }
-
     .image-container img {
         position: absolute;
         top: 0;
