--- a/src/pages/albums/[albumId].astro
+++ b/src/pages/albums/[albumId].astro
@@ -19,7 +19,7 @@ export async function getAlbums() {
                                 "*",
                                 {
                                     characters_id: [
-                                        "id",
+                                        "slug",
                                         "visible",
                                         "name_en",
                                         "name_jp",
@@ -112,7 +112,7 @@ const songs = forceArr(album.songs ?? []).map((song) => ({
                                 <a
                                     href={
                                         singer.characters_id.visible
-                                            ? `/characters/${singer.characters_id.id}`
+                                            ? `/characters/${singer.characters_id.slug}`
                                             : undefined
                                     }
                                 >
