--- a/src/pages/characters/[slug]/index.astro
+++ b/src/pages/characters/[slug]/index.astro
@@ -24,7 +24,7 @@ export async function getChars() {
                 "*",
                 {
                     translations: ["*"],
-                    roommate: ["name_en", "visible", "id"],
+                    roommate: ["name_en", "visible", "slug"],
                     seiyuu: ["*", { pic: ["filename_disk"] }],
                     counterpart: ["*", { pic: ["filename_disk"] }],
                     voice: ["filename_disk"],
