--- a/src/pages/characters/[slug]/index.astro
+++ b/src/pages/characters/[slug]/index.astro
@@ -163,7 +163,7 @@ if (character.counterpart)
                             color={character.main_color}
                         />
                         <a href={`/characters/${character.slug}/gallery`}>
-                            Image Gallery
+                            Image Gallery ({galleryCount})
                         </a>
                     </div>
                 )
